Display a warning message if user enters an invalid Execute command in the Session editor.

BUG: 105754 


svn path=/trunk/KDE/kdebase/kcontrol/; revision=417792